--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,14 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
 # firebase
 firebase-service-account.json
